--- a/package.json
+++ b/package.json
@@ -12,31 +12,33 @@
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
-    "@angular/common": "^4.4.3",
-    "@angular/compiler": "^4.4.3",
-    "@angular/compiler-cli": "^4.4.3",
-    "@angular/core": "^4.4.3",
-    "@angular/forms": "^4.4.3",
-    "@angular/http": "^4.4.3",
-    "@angular/platform-browser": "^4.4.3",
-    "@angular/platform-browser-dynamic": "^4.4.3",
+    "@angular/common": "^5.0.5",
+    "@angular/compiler": "^5.0.5",
+    "@angular/compiler-cli": "^5.0.5",
+    "@angular/core": "^5.0.5",
+    "@angular/forms": "^5.0.5",
+    "@angular/http": "^5.0.5",
+    "@angular/platform-browser": "^5.0.5",
+    "@angular/platform-browser-dynamic": "^5.0.5",
     "@ionic-native/core": "4.4.2",
     "@ionic-native/splash-screen": "4.4.2",
     "@ionic-native/status-bar": "4.4.2",
     "@ionic/storage": "2.1.3",
-    "angularfire2": "^4.0.0-rc.2",
-    "firebase": "^3.6.6",
-    "ionic-angular": "^3.7.0",
+    "angularfire2": "^5.0.0-rc.4",
+    "chart.js": "^2.7.1",
+    "firebase": "^4.7.0",
+    "ionic-angular": "^3.9.2",
     "ionicons": "3.0.0",
+    "mask-ioni-3": "^1.1.3",
+    "ng2-charts": "^1.6.0",
     "promise-polyfill": "6.1.0",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.3",
     "sw-toolbox": "3.6.0",
-    "webpack": "^3.8.1",
-    "zone.js": "^0.8.17",
-    "mask-ioni-3": "^1.1.3"
+    "webpack": "^3.9.1",
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "^3.1.2",
+    "@ionic/app-scripts": "^3.1.4",
     "typescript": "2.4.2"
   },
   "description": "An Ionic project",
